// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayUserCard should render a ClayUserCard with actionItems 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
      <div class="flex-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#1">Save</a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with classes 1`] = `
<div class="card-type-asset card my-custom-class">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with icon 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with id 1`] = `
<div class="card-type-asset card" id="myId">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageAlt 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageSrc 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl">
        <img alt="" class="img-fluid" src="thumbnail_coffee.jpg">
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
            <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Name">User Name</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" value="checkbox" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
            <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Name">User Name</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with subtitle 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
        <div class="card-subtitle text-truncate" title="Author Action">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with title 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="empty-background.png">empty-background.png</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`danger color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-danger rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`dark color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-dark rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`info color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-info rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`light color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-light rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`primary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`secondary color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-secondary rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`success color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-success rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type \`warning color\` 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-warning rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with type 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl">DOC</span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with url 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <a class=" card-title text-truncate" href="#1">User Name</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a disabled ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
            <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Name">User Name</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayUserCard should render a selected ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-indicator"></span>
      <div class="card card-type-asset">
        <div class="aspect-ratio card-item-first">
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
            <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
          </div>
        </div>
        <div class="card-body">
          <div class="card-row">
            <div class="flex-col flex-col-expand">
              <div class="card-title text-truncate" title="User Name">User Name</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayUserCard should render the default markup 1`] = `
<div class="card-type-asset card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid">
      <span class="sticker sticker-primary rounded-circle sticker-xl"></span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="User Name">User Name</div>
      </div>
    </div>
  </div>
</div>
`;
